Fix spacing issue with the calendar

--- a/_sass/molecules/_calendar.scss
+++ b/_sass/molecules/_calendar.scss
@@ -1,16 +1,8 @@
 .calendar {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  max-height: 100%;
 }
 
 .calendar-container {
-  position: relative;
-  padding-bottom: 75%;
-  height: 0;
-  overflow: hidden;
   margin: auto;
   max-width: 900px;
 }
